fix : layout problem in register/login page fixed

--- a/src/pages/LoginPage/LoginPage.scss
+++ b/src/pages/LoginPage/LoginPage.scss
@@ -25,6 +25,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            padding-right: 12px;
 
             &__title {
                 margin-top: 20px;
