--- a/src/pages/RegisterPage/RegisterPage.scss
+++ b/src/pages/RegisterPage/RegisterPage.scss
@@ -25,6 +25,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            justify-content: center;
 
             &__title {
                 margin-top: 20px;
@@ -42,16 +43,22 @@
             &__inputs {
                 margin-bottom: 40px;
                 width: 100%;
-                text-align: center;
                 display: flex;
+                justify-content: center;
+                align-items: center;
                 flex-direction: column;
                 gap: 15px;
 
                 .input {
                     border-color: $color-grey;
+                    width: 100%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    padding-right: 12px;
 
                     input, select {
-                        width: 80%;
+                        width: 85%;
                         border: none;
                         border-bottom: 1px solid $color-grey;
                         border-color: grey;
